<resources>
    <string name="app_name">DevinoHuaweiExample</string>
    <string name="version_placeholder">version V1: %s</string>
    <string name="devino_telecom">Devino Telecom</string>
    <string name="devino_default_deeplink">devino://default-push-action</string>

    <string name="device_type">phone</string>
    <string name="user_email">User Email</string>
    <string name="email_hint">email</string>
    <string name="symbol_plus">+</string>
    <string name="invalid_phone_or_email">Invalid phone or email</string>
    <string name="user_phone">User Phone</string>
    <string name="skip_registration">Skip registration</string>
    <string name="api_url">API Url</string>
    <string name="api_url_hint">API root url</string>
    <string name="confirm_root_url">Confirm Root Url</string>
    <string name="register">Register</string>

    <string name="task_tag">DevinoPushLogs</string>
    <string name="logs_tag">DevinoPushLogs</string>
    <string name="tag">DevinoPush</string>

    <string name="logs">Logs</string>
    <string name="clean_logs">Clean logs</string>
    <string name="copy_log">Copy Log</string>
    <string name="copy_token">Copy Token</string>
    <string name="token_copied">The token has been copied.</string>
    <string name="token_copied_error">Copy token -> Push Kit Error:</string>
    <string name="push_send">Push was send:</string>
    <string name="push_send_error">Demo Send Push Error:</string>
    <string name="push_not_send">Push was not send:</string>
    <string name="push_not_send_token_not_got">Push was not send because token is not got (Firebase Error):</string>
    <string name="log_copied">The log has been copied.</string>

    <string name="class_cast_exception">Activity must implement fragment`s MainActivityCallback.</string>
    <string name="error_registration">Error:</string>
    <string name="error_phone_email">Invalid phone or email</string>

    <string name="notifications_disabled">Notifications are disabled for this application.</string>
    <string name="registration">Registration</string>

    <string name="subscribed_geo_interval">Subscribed geo with interval: %d %s</string>
    <string name="min"> min</string>
    <string name="notification_permission_granted">Notification Permission Granted</string>
    <string name="notification_permission_missing">Notification Permission Missing</string>
    <string name="foreground_geo_permission_granted">Foreground Geo Permission Granted</string>
    <string name="foreground_geo_permission_missing">Foreground Geo Permission Missing</string>
    <string name="background_geo_permission_granted">Background Geo Permission Granted</string>
    <string name="background_geo_permission_missing">Background Geo Permission Missing</string>
    <string name="background_geo_permission_text">Background Geo Permission is required. In the next step, select "Allow all the time" in the app settings</string>
    <string name="geo_fine_permission_granted">Geo Fine Permission Granted</string>
    <string name="geo_coarse_permission_granted">Geo Coarse Permission Granted</string>
    <string name="next">Next</string>
    <string name="may_devino_permission">May Devino SDK take care of that now?</string>
    <string name="send_geo">Send Geo</string>
    <string name="send_notification">Send Notification</string>
    <string name="picture">Picture</string>
    <string name="sound">Sound</string>
    <string name="deep_link">Deep Link</string>
    <string name="action">Action</string>
    <string name="deeplink_action">Вы перешли по Deeplink</string>
    <string name="back">Назад</string>

    <string name="error_remove_registration">Error during removed registration:</string>
    <string name="error_send_push">Error during send push:</string>
    <string name="error_send_geo">Error during send geo:</string>
    <string name="error_firebase">Firebase Error:</string>
    <string name="error_rxJavaPlugins">RxJavaPlugins Error:</string>
</resources>