<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="@color/md_white_1000"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <include
                android:id="@+id/app_header"
                layout="@layout/app_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/layout_registration_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"/>


            <LinearLayout
                android:id="@+id/layout_registration_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="38dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/layout_api_url"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_header">

                <TextView
                    android:id="@+id/text_user_phone_label"
                    style="@style/TextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:labelFor="@+id/edt_user_phone"
                    android:text="@string/user_phone" />

                <EditText
                    android:id="@+id/edt_user_phone"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints="@string/user_phone"
                    android:background="@drawable/ic_grey_background"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/text_79" />

                <TextView
                    android:id="@+id/text_user_email_label"
                    style="@style/TextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:labelFor="@+id/edt_user_email"
                    android:text="@string/user_email" />

                <EditText
                    android:id="@+id/edt_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints="@string/user_email"
                    android:background="@drawable/ic_grey_background"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_registration"
                    style="@style/ButtonWide"
                    android:layout_width="match_parent"
                    android:layout_marginTop="53dp"
                    android:background="@drawable/ic_button_blue"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/md_white_1000" />

                <TextView
                    android:id="@+id/text_skip_registration"
                    style="@style/TextRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/skip_registration" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_api_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_registration_form">

                <TextView
                    android:id="@+id/text_api_url_label"
                    style="@style/TextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:labelFor="@+id/edt_api_url"
                    android:text="@string/api_url" />

                <EditText
                    android:id="@+id/edt_api_url"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/ic_grey_background"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/api_url_hint"
                    android:inputType="textUri"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_confirm_root_url"
                    style="@style/ButtonWide"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/ic_button_blue"
                    android:text="@string/confirm_root_url"
                    android:textColor="@color/md_white_1000" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>